# niowase-police

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-no-gpu.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml
app/: clip_model.py  main.py
