[project]
name = "niowase-police"
version = "0.1.0"
description = "Discord niowase detection bot"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "discord-py>=2.7.0",
  "pillow>=12.1.1",
  "requests>=2.32.5",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "transformers>=4.41.0,<5.0.0",
  "sentencepiece>=0.1.99",
  "protobuf>=4.25.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]
